fixed group listing gap

--- a/docroot/profiles/drupal_commons/themes/commons_environs/css/styles.css
+++ b/docroot/profiles/drupal_commons/themes/commons_environs/css/styles.css
@@ -429,9 +429,9 @@ label {
   margin-bottom: 0;
 }
 
-#content-tabs ul.primary {
+/*#content-tabs ul.primary {
 	margin-left: 7px;
-}
+}*/
 
 #content-tabs ul.primary li a:link, #content-tabs ul.primary li a:visited {
   -moz-border-radius-topleft: 7px;
@@ -1115,4 +1115,16 @@ ul.pager a, ul.pager li.pager-current {
 
 #block-views-groups_featured_groups-block_1 .content .views-row .views-field-description {
   width: 550px;
+}
+
+/* group list */
+.view .view-content .item-list li.views-row {
+  border-bottom: 1px solid #8AC559;
+  padding: 10px 0px;
+  margin: 0px;
+  background: none;
+}
+
+.view .view-content .item-list li.views-row-last {
+  border-bottom: none;
 }
